SONARIAC-1861 Adjust ITS for removal of ncloc_data metric